--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
 
     <h2>Overview</h2>
-    <p>Us vs. It is a cooperative game that teaches iterative tuning. The game is played in two stages. In the first stage, you act as scientists working together to program a giant robot using plain text triggers to allocate actions. In the second stage, you take the role of tank commanders and control the game using the button controls on the game screen.</p>
+    <p>Tanks vs. Robots is a cooperative game that teaches iterative tuning. The game is played in two stages. In the first stage, you act as scientists working together to program a giant robot using plain text triggers to allocate actions. In the second stage, you take the role of tank commanders and control the game using the button controls on the game screen.</p>
 
     <h2>Setup</h2>
     <ol>
